feat: add on_hand image_url
